--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,7 +4,7 @@
 
 
 @layer base {
-    
+
     body {
         @apply bg-lightest-brown;
     }
@@ -17,7 +17,7 @@
     h3 {
         @apply text-xl;
     }
-    p {
-        @apply text-xs;
-    }
+    /*p {*/
+    /*    @apply text-xs;  comment by amr saleh do not override p please use it so much */
+    /*}*/
 }
